tests/define/define_in_expression.ast.err
Error: Unexpected token in input while parsing list, expected ), <expression>
   ╭─[tests/define/define_in_expression.scm:2:6]
   │
 2 │ (foo define)
   ·      ───┬──  
   ·         ╰──── Unexpected token define
───╯
Error: Unexpected token in input, expected end of input
   ╭─[tests/define/define_in_expression.scm:3:1]
   │
 3 │ define
   · ───┬──  
   ·    ╰──── Unexpected token define
───╯
