tests/define/define_in_expression.scm
(define a 3154)
(foo define)
define